--- a/index.html
+++ b/index.html
@@ -1,36 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <title>Frontend Mentor | Product preview card component</title>
+    <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link href="./dist/output.css" rel="stylesheet" />
+  </head>
+  <body class="bg-cream">
+    <main>
+      <div class="flex h-screen items-center justify-center">
+        <div class="flex flex-col rounded-3xl bg-white sm:flex-row">
+          <div class="w-96 flex-initial sm:w-80">
+            <img
+              class="hidden rounded-bl-3xl rounded-tl-3xl sm:block"
+              src="./images/image-product-desktop.jpg" alt="product image"
+            />
+            <img
+              class="rounded-tl-3xl rounded-tr-3xl sm:hidden"
+              src="./images/image-product-mobile.jpg" alt="product image"
+            />
+          </div>
+          <div class="w-96 flex-col space-y-5 p-8 sm:w-80">
+            <div class="font-montserrat text-dark-grayish-blue text-base tracking-widest font-medium">PERFUME</div>
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge,
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+            <h1 class="font-fraunces text-4xl font-bold">
+              Gabrielle Essence Eau De Parfum
+            </h1>
+            <div class="font-montserrat text-dark-grayish-blue">
+              A floral, solar and voluptuous interpretation composed by Olivier
+              Polge, Perfumer-Creator for the House of CHANEL.
+            </div>
+            <div class="flex items-center">
+              <div class="font-fraunces text-4xl font-bold text-dark-cyan">
+                $149.99
+              </div>
+              <div
+                class="pl-8 font-montserrat text-dark-grayish-blue line-through"
+              >
+                $169.99
+              </div>
+            </div>
+            <div
+              class="flex items-center justify-center space-x-3 rounded-xl bg-dark-cyan p-4 hover:bg-very-dark-blue"
+            >
+              <img src="./images/icon-cart.svg" alt="cart icon" />
+              <div class="font-montserrat text-white">Add to Cart</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <div class="justify-center p-4 text-center">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/tomtrin/fe_product_preview_card_component" target="_blank">Tommy Trinh</a>.
+    </div>
+  </body>
 </html>
