fix: missing landing and spacing issues

--- a/index.html
+++ b/index.html
@@ -23,15 +23,21 @@
           <div class="w-96 flex-initial sm:w-80">
             <img
               class="hidden rounded-bl-3xl rounded-tl-3xl sm:block"
-              src="./images/image-product-desktop.jpg" alt="product image"
+              src="./images/image-product-desktop.jpg"
+              alt="product image"
             />
             <img
               class="rounded-tl-3xl rounded-tr-3xl sm:hidden"
-              src="./images/image-product-mobile.jpg" alt="product image"
+              src="./images/image-product-mobile.jpg"
+              alt="product image"
             />
           </div>
-          <div class="w-96 flex-col space-y-5 p-8 sm:w-80">
-            <div class="font-montserrat text-dark-grayish-blue text-base tracking-widest font-medium">PERFUME</div>
+          <div class="w-96 flex-col space-y-4 p-8 sm:w-80">
+            <div
+              class="font-montserrat text-base font-medium tracking-widest text-dark-grayish-blue"
+            >
+              PERFUME
+            </div>
 
             <h1 class="font-fraunces text-4xl font-bold">
               Gabrielle Essence Eau De Parfum
@@ -60,11 +66,18 @@
         </div>
       </div>
     </main>
-    <div class="justify-center p-4 text-center">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/tomtrin/fe_product_preview_card_component" target="_blank">Tommy Trinh</a>.
-    </div>
+    <footer>
+      <div class="justify-center p-4 text-center">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          href="https://github.com/tomtrin/fe_product_preview_card_component"
+          target="_blank"
+          >Tommy Trinh</a
+        >.
+      </div>
+    </footer>
   </body>
 </html>
