fix: spacing and font size

--- a/index.html
+++ b/index.html
@@ -19,35 +19,35 @@
   <body class="bg-cream">
     <main>
       <div class="flex h-screen items-center justify-center">
-        <div class="flex flex-col rounded-3xl bg-white sm:flex-row">
+        <div class="flex flex-col rounded-2xl bg-white sm:flex-row">
           <div class="w-96 flex-initial sm:w-80">
             <img
-              class="hidden rounded-bl-3xl rounded-tl-3xl sm:block"
+              class="hidden rounded-bl-2xl rounded-tl-2xl sm:block"
               src="./images/image-product-desktop.jpg"
               alt="product image"
             />
             <img
-              class="rounded-tl-3xl rounded-tr-3xl sm:hidden"
+              class="rounded-tl-2xl rounded-tr-2xl sm:hidden"
               src="./images/image-product-mobile.jpg"
               alt="product image"
             />
           </div>
-          <div class="w-96 flex-col space-y-4 p-8 sm:w-80">
+          <div class="w-96 flex-col space-y-6 p-8 sm:w-80">
             <div
-              class="font-montserrat text-base font-medium tracking-widest text-dark-grayish-blue"
+              class="font-montserrat text-sm font-base tracking-widest text-dark-grayish-blue"
             >
               PERFUME
             </div>
 
-            <h1 class="font-fraunces text-4xl font-bold">
+            <h1 class="font-fraunces text-3xl font-bold">
               Gabrielle Essence Eau De Parfum
             </h1>
-            <div class="font-montserrat text-dark-grayish-blue">
+            <div class="font-montserrat text-sm text-dark-grayish-blue">
               A floral, solar and voluptuous interpretation composed by Olivier
               Polge, Perfumer-Creator for the House of CHANEL.
             </div>
             <div class="flex items-center">
-              <div class="font-fraunces text-4xl font-bold text-dark-cyan">
+              <div class="font-fraunces text-3xl font-bold text-dark-cyan">
                 $149.99
               </div>
               <div
